# flyspanker

./: .gitignore  LICENSE  README.md  pyproject.toml
flyspanker/: __init__.py  headers.py  spanker.py
tests/: test_headers.py  test_spanker.py
