[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flyspanker"
version = "0.1.0"
description = "Tools for quickly examining fluxes and metadata in astronomical images"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "astropy>=5.0",
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flyspanker*"]
