[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flyspanker"
version = "0.1.0"
description = "A tool for quickly examining fluxes in an astronomical image"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "astropy>=5.0",
    "matplotlib>=3.5",
    "numpy>=1.21",
    "ipywidgets>=8.0",
    "ipympl>=0.9",
    "photutils>=1.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-mpl",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["flyspanker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
